feat: Improve .gitignore file
This commit updates the .gitignore file to include common files and directories that should not be tracked by Git.

The following changes were made:

- Added common Python files and directories such as *.pyc, __pycache__/, and .env.
- Added Django specific files and directories such as media/, django_ckeditor_5, admin, assets, rest_framework, drf-yasg.
- Added database related files and directories such as postgres_data/, alembic/, and test.db.
- Removed uv.lock as it's not commonly ignored.
- Added **/migrations/ to ignore migrations directories.
- Added .idea to ignore the IntelliJ IDEA project directory.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -35,6 +36,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+
+**/migrations/
 
 # Unit test / coverage reports
 htmlcov/
@@ -94,12 +97,6 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
@@ -112,10 +109,10 @@ ipython_config.py
 #pdm.lock
 #   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
 #   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
+#   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
-.pdm-python
-.pdm-build/
+
+**/migrations/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
@@ -167,8 +164,23 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Ruff stuff:
-.ruff_cache/
+django_ckeditor_5
+admin
+assets
+rest_framework
+drf-yasg
+media
 
-# PyPI configuration file
-.pypirc
+
+.idea
+
+.env
+*.pyc
+__pycache__/
+media/
+
+postgres_data/
+
+alembic/
+./alembic
+test.db
