--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,21 @@
+# repos:
+
+#   - repo: local
+#     hooks:
+#       - id: run-tests
+#         name: pytest
+#         entry: pytest
+#         language: system
+#         types: [python]
+#         pass_filenames: false
+#         args: ["tests/","--maxfail=1"]
+
+
 repos:
   - repo: local
     hooks:
       - id: run-tests
-        name: Run Tests Before Commit
-        entry: python test.py -v       # or 'pytest -v' if you use pytest
-        language: python
-        types: [python]
-        additional_dependencies:
-          - annotated-types==0.7.0
-          - anyio==4.9.0
-          - asyncpg==0.30.0
-          - click==8.2.1
-          - dnspython==2.7.0
-          - email_validator==2.2.0
-          - fastapi==0.115.12
-          - greenlet==3.2.2
-          - h11==0.16.0
-          - idna==3.10
-          - Jinja2==3.1.6
-          - MarkupSafe==3.0.2
-          - psycopg2-binary==2.9.10
-          - pydantic==2.11.5
-          - pydantic_core==2.33.2
-          - sniffio==1.3.1
-          - SQLAlchemy==2.0.41
-          - starlette==0.46.2
-          - typing-inspection==0.4.1
-          - typing_extensions==4.13.2
-          - uvicorn==0.34.2
-          - pytest==8.0.0
-          - httpx==0.26.0
+        name: pytest
+        entry: bash -c 'PYTHONPATH=. pytest tests --maxfail=1'
+        language: system
+        pass_filenames: false
