--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,8 @@
-# repos:
-
-#   - repo: local
-#     hooks:
-#       - id: run-tests
-#         name: pytest
-#         entry: pytest
-#         language: system
-#         types: [python]
-#         pass_filenames: false
-#         args: ["tests/","--maxfail=1"]
-
-
 repos:
   - repo: local
     hooks:
       - id: run-tests
         name: pytest
-        entry: bash -c 'PYTHONPATH=. pytest tests --maxfail=1'
+        entry: pytest tests --maxfail=1
         language: system
         pass_filenames: false
